deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-blog
  labels:
    app: example-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-blog
  template:
    metadata:
      labels:
        app: example-blog
    spec:
      containers:
      - name: example-blog
        image: ghost:4-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2368
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
